# vulkan-guide

./: .gitignore  README.md
doc/: main.aux  main.out  main.tex  main.toc
vulkan-guide/: meson.build  meson_options.txt  vulkan-guide.sln  vulkan-guide.vcxproj  vulkan-guide.vcxproj.filters
vulkan-guide/data/: triangle_fs.glsl  triangle_fs.spv  triangle_vs.glsl  triangle_vs.spv
vulkan-guide/include/: frame_and_command_buffers.h  graphics_pipeline.h  image_views.h  logical_device.h  physical_devices_and_queue_families.h  queue_family_indices.h  surface.h  swap_chain.h  swap_chain_support_details.h  triangle.h  types.h  utils.h  validation_layers.h  vulkan_example.h  vulkan_helper.h
vulkan-guide/src/: frame_and_command_buffers.cpp  graphics_pipeline.cpp  image_views.cpp  logical_device.cpp  main.cpp  physical_devices_and_queue_families.cpp  surface.cpp  swap_chain.cpp  triangle.cpp  validation_layers.cpp  vulkan_example.cpp
